--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/theme-icons.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Team Digitale - National Data Catalog"
-    />
+    <meta name="description" content="Team Digitale - National Data Catalog" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Team Digitale - National Data Catalog</title>
   </head>
