--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/theme-icons.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/fonts.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Team Digitale - National Data Catalog" />
@@ -25,6 +26,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script>window.__PUBLIC_PATH__ = '<%= BASE_URL %>fonts'</script>
+    <script>window.__PUBLIC_PATH__ = "%PUBLIC_URL%/fonts"</script>
   </body>
 </html>
