#118 - showing schema details using swagger ui

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Security-Policy"
           content="default-src 'none'; script-src 'self'; script-src-elem 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';
-                  base-uri 'self'; img-src 'self' data: https; font-src *; connect-src 'self'; manifest-src *;">
+                  base-uri 'self'; img-src 'self' data: https; font-src *; connect-src *; manifest-src *;">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/fonts.css" />
