--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://analytics.istat.it; script-src-elem 'self' https://analytics.istat.it 'unsafe-inline'; style-src 'self' 'unsafe-inline';
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://analytics.istat.it; script-src-elem 'self' https://analytics.istat.it 'unsafe-inline'; style-src 'self' 'unsafe-inline';
                   base-uri 'self'; img-src 'self' data: https; font-src *; connect-src *; manifest-src *;">
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
