#Tech. Modify nginx configuration to exclude istat.it domain as nginx is also configured to have the response header CSP

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://analytics.istat.it 'unsafe-inline'; style-src 'self' 'unsafe-inline';
-                  base-uri 'self'; img-src 'self' data: https; font-src *; connect-src *; manifest-src *;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self'; script-src-elem 'self' *.istat.it 'unsafe-inline'; style-src 'self' *.istat.it 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src *; manifest-src 'self';">
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/fonts.css" />
