--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <script src="%PUBLIC_URL%/env-config.js"></script>
   <!-- Matomo -->
   <script>
-    var idSite = 34;
+    var idSite = 35;
     var matomoTrackingApiUrl = 'https://analytics.istat.it/matomo.php';
 
     var _paq = window._paq = window._paq || [];
@@ -23,13 +23,14 @@
     _paq.push(['setSiteId', idSite]);
     _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
     _paq.push(["setCookieDomain", "*."+document.domain]);
+    _paq.push(["setDomains", ["*."+document.domain, "*."+document.domain]]);
     _paq.push(['setSecureCookie', true]);
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);   
   </script>
   <script src="https://analytics.istat.it/matomo.js" async defer></script>
   <noscript>
-    <p><img src="https://analytics.istat.it/matomo.php?idsite=33&amp;rec=1" style="border:0;" alt="" /></p>
+    <p><img src="https://analytics.istat.it/matomo.php?idsite=35&amp;rec=1" style="border:0;" alt="" /></p>
   </noscript>
   <!-- End Matomo Code -->
 </head>
