Fix website html lang attribute ie. with 'it'

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
   <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self'; script-src-elem 'self' *.istat.it 'unsafe-inline'; style-src 'self' *.istat.it 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src *; manifest-src 'self';">
