Change title and subtitle

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/css/fonts.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Team Digitale - National Data Catalog" />
+  <meta name="description" content="Catalogo Nazionale Dati" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Team Digitale - National Data Catalog</title>
+  <title>Catalogo Nazionale Dati</title>
   <script src="%PUBLIC_URL%/env-config.js"></script>
   <!-- Matomo -->
   <script>
