--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="it">
 
 <head>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self'; script-src-elem 'self' *.istat.it 'unsafe-inline'; style-src 'self' *.istat.it 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src *; manifest-src 'self';">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'none'; script-src 'self'; script-src-elem 'self' *.istat.it 'unsafe-inline'; style-src 'self' *.istat.it 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src *; manifest-src 'self';">
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/fonts.css" />
@@ -22,8 +23,8 @@
     _paq.push(['setTrackerUrl', matomoTrackingApiUrl]);
     _paq.push(['setSiteId', idSite]);
     _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
-    _paq.push(["setCookieDomain", "*."+document.domain]);
-    _paq.push(["setDomains", ["*."+document.domain, "*."+document.domain]]);
+    _paq.push(["setCookieDomain", "*." + document.domain]);
+    _paq.push(["setDomains", ["*." + document.domain, "*." + document.domain]]);
     _paq.push(['setSecureCookie', true]);
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);   
