#Patch: Disabling the analytics logging as legal notes are not ready yet. Prefixing the domain with www

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,10 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Catalogo Nazionale Dati</title>
   <script src="%PUBLIC_URL%/env-config.js"></script>
+  
   <!-- Matomo -->
-  <script>
+  <!-- Disable analytics until legal notes is present 
+    <script>
     var idSite = Number(window._env_ && window._env_.MATOMO_SITE_ID || 35);
     var matomoTrackingApiUrl = 'https://analytics.istat.it/matomo.php';
 
@@ -32,8 +34,9 @@
   <script src="https://analytics.istat.it/matomo.js" async defer></script>
   <noscript>
     <p><img src="https://analytics.istat.it/matomo.php?idsite=33&amp;rec=1" style="border:0;" alt="" /></p>
-  </noscript>
+  </noscript> -->
   <!-- End Matomo Code -->
+  
 </head>
 
 <body>
