--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script>window.__PUBLIC_PATH__ = "%PUBLIC_URL%/fonts"</script>
+  <script>
+    bootstrap.loadFonts('%PUBLIC_URL%/fonts');
+  </script>
 </body>
 
 </html>
