--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Security-Policy"
-  content="default-src 'self'; script-src 'self'; script-src-elem 'self' *.istat.it 'unsafe-inline'; style-src 'self' *.istat.it 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src *; manifest-src 'self';">
+  content="default-src *; script-src 'self'; script-src-elem 'self' *.istat.it 'unsafe-inline'; style-src 'self' *.istat.it 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src *; manifest-src 'self';">
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet" href="%PUBLIC_URL%/css/fonts.css" />
