--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>È necessario abilitare JavaScript per eseguire questa app.</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
