feat(general): added assistente landing page and added redirect-guard.standalone.js

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Catalogo Nazionale Dati</title>
     <script src="%PUBLIC_URL%/js/global.js"></script>
+    <script src="%PUBLIC_URL%/js/redirect-guard.standalone.js"></script>
     <script src="%PUBLIC_URL%/env-config.js"></script>
 
     <script>
